--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = KonosCL/addons-konos
 	url = git@github.com:KonosCL/addons-konos.git
 	branch = 12.0
+
+[submodule "dimabe-odoo/FINIQUITO"]
+	path = dimabe-odoo/FINIQUITO
+	url = git@github.com:dimabe-odoo/FINIQUITO.git
+	branch = master
