--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = dimabe-odoo/facturacion
 	url = git@github.com:dimabe-odoo/facturacion.git
 	branch = master
+
+[submodule "KonosCL/webservices_generic"]
+	path = KonosCL/webservices_generic
+	url = git@github.com:KonosCL/webservices_generic.git
+	branch = 12.0
