--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,8 @@
 	path = KonosCL/webservices_generic
 	url = git@github.com:KonosCL/webservices_generic.git
 	branch = 12.0
+
+[submodule "dimabe-odoo/moneda"]
+	path = dimabe-odoo/moneda
+	url = git@github.com:dimabe-odoo/moneda.git
+	branch = master
