--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = dimabe-odoo/factura_exportacion
 	url = git@github.com:dimabe-odoo/factura_exportacion.git
 	branch = master
+
+[submodule "dansanti/global_discount"]
+	path = dansanti/global_discount
+	url = git@github.com:dansanti/global_discount.git
+	branch = 9.0
